# patent-legal-status-monitoring

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
backend/process/: weekly_report_core.py
backend/prompt/: models.yml  prompt.py  prompt_config.py
backend/report/: create_report.py  templates.py  weekly_report.py
backend/src/: index.py
backend/utils/: utils.py
frontend/: app.py
