[project]
name = "open-source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langchain>=1.2.10",
    "langchain-aws>=1.2.4",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.0",
    "streamlit>=1.28.0",
]
